--- a/Lp1/css/main.css
+++ b/Lp1/css/main.css
@@ -11838,7 +11838,7 @@ ul.elementor-nav-menu--dropdown a:hover {
 }
 
 .elementor-978 .elementor-element.elementor-element-6m8m1j9>.elementor-element-populated {
-    padding: 20px 0 40px 0
+    padding: 15px 0 10px 0;
 }
 
 .elementor-978 .elementor-element.elementor-element-c7dt8uq .elementor-text-editor {
@@ -12037,10 +12037,6 @@ ul.elementor-nav-menu--dropdown a:hover {
 
 .elementor-978 .elementor-element.elementor-element-otne0au>.elementor-element-populated>.elementor-background-overlay {
     transition: background 0.3s, border-radius 0.3s, opacity 0.3s
-}
-
-.elementor-978 .elementor-element.elementor-element-62plvqd {
-    text-align: right
 }
 
 .elementor-978 .elementor-element.elementor-element-62plvqd .elementor-image img {
