--- a/LP3/css/style.css
+++ b/LP3/css/style.css
@@ -6,7 +6,7 @@ body {
     color: #000;
     font-weight: 400;
     letter-spacing: -0.5px;
-    direction: LTR;
+    /* direction: rtl; */
     color: #555
 }
 
@@ -21,7 +21,7 @@ select {
     font-size: 13px;
     color: #3d3d3d;
     padding: 10px;
-    background: url(../images/arrow.png) no-repeat 96% 12px #fff;
+    background: url(../img/arrow.png) no-repeat 96% 12px #fff;
 }
 
 a,
@@ -97,7 +97,7 @@ span.skype_pnh_print_container {
 .header {
     width: 100%;
     float: left;
-    background: url(../images/banner-bg.png) no-repeat center bottom;
+    background: url(../img/banner-bg.png) no-repeat center bottom;
     padding: 30px 0 0 0;
 }
 
@@ -112,16 +112,17 @@ span.skype_pnh_print_container {
 
 .banner_text h1 {
     font-family: 'fbspoileren', 'OpenSansHebrew-Regular';
-    font-size: 76px;
+    font-size: 52px;
     text-shadow: 6px 6px 0px rgba(0, 0, 0, 0.2);
     color: #e4872c;
 }
 
 .banner_text h2 {
+    margin-top:20px;
     color: white;
     padding: 0 0 30px 0;
-    font-size: 55px;
-    line-height: 55px;
+    font-size: 36px;
+    line-height: 42px;
     font-weight: normal;
 }
 
@@ -191,7 +192,7 @@ span.skype_pnh_print_container {
     height: 30px;
     padding: 0 5%;
     width: 90%;
-    text-align: right;
+    /* text-align: right; */
     background: #fff;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -243,7 +244,7 @@ span.skype_pnh_print_container {
 .main_content .other_container {
     width: 100%;
     float: left;
-    background: url(../images/line2.png) no-repeat center 63px;
+    background: url(../img/line2.png) no-repeat center 63px;
     font-size: 22px;
     color: #f68e1e;
     font-family: 'fbspoileren', 'OpenSansHebrew-Regular';
@@ -286,15 +287,16 @@ span.skype_pnh_print_container {
     width: 100%;
     float: left;
     padding: 30px 0;
-    background: url(../images/testimonials.png) repeat-y center 0;
+    background: url(../img/testimonials.png) repeat-y center 0;
 }
 
 .testimonials h1 {
-    font-size: 41px;
+    font-size: 32px;
     color: #f68e1e;
     font-family: 'fbspoileren', 'OpenSansHebrew-Regular';
     padding: 0 0 30px 0;
     font-weight: bold;
+    text-align:center;
 }
 
 .video_container {
