--- a/LP3/css/style.css
+++ b/LP3/css/style.css
@@ -104,7 +104,8 @@ span.skype_pnh_print_container {
 .banner_text {
     width: 45%;
     float: right;
-    font-size: 36px;
+    font-size: 28px;
+    font-weight:bold;
     color: #fff;
     padding: 30px 10% 0 0;
     font-family: 'Poppins-Regular', 'OpenSansHebrew-Regular';
@@ -112,7 +113,8 @@ span.skype_pnh_print_container {
 
 .banner_text h1 {
     font-family: 'Poppins-Regular', 'OpenSansHebrew-Regular';
-    font-size: 52px;
+    font-size: 50px;
+    text-transform: uppercase;
     text-shadow: 6px 6px 0px rgba(0, 0, 0, 0.2);
     color: #e4872c;
 }
@@ -121,8 +123,8 @@ span.skype_pnh_print_container {
     margin-top:20px;
     color: white;
     padding: 0 0 30px 0;
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 26px;
+    line-height: 38px;
     font-weight: normal;
 }
 
@@ -230,7 +232,7 @@ span.skype_pnh_print_container {
 }
 
 .main_content h4 {
-    font-size: 52px;
+    font-size: 50px;
     color: #e4872c;
     font-family: 'Poppins-Regular', 'OpenSansHebrew-Regular';
 }
@@ -238,7 +240,7 @@ span.skype_pnh_print_container {
 .main_content .text_holder {
     width: 100%;
     float: left;
-    font-size: 20px;
+    font-size: 16px;
     padding: 20px 0;
 }
 
@@ -281,6 +283,7 @@ span.skype_pnh_print_container {
     float: left;
     padding: 0;
     text-align:center;
+    font-weight:bold;
 }
 
 .mobile_image,
@@ -297,7 +300,7 @@ span.skype_pnh_print_container {
 }
 
 .testimonials h1 {
-    font-size: 32px;
+    font-size: 30px;
     color: #f68e1e;
     font-family: 'Poppins-Regular', 'OpenSansHebrew-Regular';
     padding: 0 0 30px 0;
@@ -319,8 +322,8 @@ span.skype_pnh_print_container {
 }
 
 .video_container .player {
-    width: 390px;
-    float: right;
+    width: 640px;
+    margin: 0 auto;
 }
 
 .video_container .player img {
@@ -357,10 +360,10 @@ span.skype_pnh_print_container {
     font-size: 15px;
 }
 .top-header {
-    background:#00855F;
+    background:#f78f1e;
 }
 .top-header .details_holder {
-    background:#00855F;
+    background:#f78f1e;
     text-align:center;
 }
 .top-header .logo {
