--- a/LP2/css/main.css
+++ b/LP2/css/main.css
@@ -3379,6 +3379,7 @@ ul.elementor-icon-list-items.elementor-inline-items .elementor-inline-item {
     font-weight: bold;
     padding: 3px 8px;
     background: #01AF7A;
+    font-family: "Poppins-Regular", Sans-serif;
 }
 
 .elementor-widget-image .elementor-image.elementor-image-shape-circle {
