--- a/LP3/css/style.css
+++ b/LP3/css/style.css
@@ -23,7 +23,12 @@ select {
     padding: 10px;
     background: url(../img/arrow.png) no-repeat 96% 12px #fff;
 }
-
+.alert {
+    font-size: 14px;
+    color: #475564;
+    margin-bottom: 10px;
+    display: none;
+}
 a,
 input,
 select,
