--- a/Lp1/css/main.css
+++ b/Lp1/css/main.css
@@ -22842,10 +22842,17 @@ a.thumbnail:focus {
 }
 
 .alert {
-    padding: 15px;
-    margin-bottom: 20px;
-    border: 1px solid transparent;
-    border-radius: 4px
+    padding: 5px 10px;
+    font-size: 14px;
+    margin-bottom: 10px;
+    border: 1px solid #475564;
+    background: #475564;
+    border-radius: 4px;
+    color: #C50073;
+    display: none;
+}
+.details_holder .alert {
+    margin-left:55px;
 }
 
 .alert h4 {
